[tool.poetry]
name = "jup"
version = "0.1.0"
description = ""
authors = ["Matthew Griffin <1matthewgriffin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
poetry = "*"

[tool.poetry.dev-dependencies]

[tool.poetry.plugins."poetry.plugin"]
jup = "jup:JupPlugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
